feat(intro): 更新介紹頁面圖片與連結註解
- 更新了行動版與桌面版的介紹圖片。
- 將介紹頁面中的 7-11 連結註解化，並移除相關內容。
- 調整配送頁面中支援店家的顯示，移除 7-11。

--- a/app/templates/intro/index.html
+++ b/app/templates/intro/index.html
@@ -26,12 +26,12 @@
           </svg>
           <span class="align-middle">全家好賣+</span>
         </a>
-        <a href="https://myship.7-11.com.tw/general/detail/GM2507101245127" target="_blank" class="bg-[#16A34A] text-white px-6 py-3 rounded-full text-lg font-bold hover:bg-[#22c55e] shadow-lg transition duration-300 flex gap-2 items-center w-11/12 justify-center">
+        <!-- <a href="https://myship.7-11.com.tw/general/detail/GM2507101245127" target="_blank" class="bg-[#16A34A] text-white px-6 py-3 rounded-full text-lg font-bold hover:bg-[#22c55e] shadow-lg transition duration-300 flex gap-2 items-center w-11/12 justify-center">
           <svg xmlns="http://www.w3.org/2000/svg" class="inline align-middle w-5 h-5" viewBox="0 0 40 40" fill="none">
             <path d="M20 21.6665C17.7899 21.6665 15.6702 20.7885 14.1074 19.2257C12.5446 17.6629 11.6667 15.5433 11.6667 13.3332H15C15 14.6593 15.5268 15.931 16.4645 16.8687C17.4021 17.8064 18.6739 18.3332 20 18.3332C21.3261 18.3332 22.5979 17.8064 23.5355 16.8687C24.4732 15.931 25 14.6593 25 13.3332H28.3333C28.3333 15.5433 27.4554 17.6629 25.8926 19.2257C24.3298 20.7885 22.2101 21.6665 20 21.6665ZM20 4.99984C21.3261 4.99984 22.5979 5.52662 23.5355 6.4643C24.4732 7.40199 25 8.67375 25 9.99984H15C15 8.67375 15.5268 7.40199 16.4645 6.4643C17.4021 5.52662 18.6739 4.99984 20 4.99984ZM31.6667 9.99984H28.3333C28.3333 8.90549 28.1178 7.82185 27.699 6.81081C27.2802 5.79976 26.6664 4.8811 25.8926 4.10728C25.1187 3.33346 24.2001 2.71963 23.189 2.30084C22.178 1.88205 21.0943 1.6665 20 1.6665C17.7899 1.6665 15.6702 2.54448 14.1074 4.10728C12.5446 5.67008 11.6667 7.7897 11.6667 9.99984H8.33333C6.48333 9.99984 5 11.4832 5 13.3332V33.3332C5 34.2172 5.35119 35.0651 5.97631 35.6902C6.60143 36.3153 7.44928 36.6665 8.33333 36.6665H31.6667C32.5507 36.6665 33.3986 36.3153 34.0237 35.6902C34.6488 35.0651 35 34.2172 35 33.3332V13.3332C35 12.4491 34.6488 11.6013 34.0237 10.9761C33.3986 10.351 32.5507 9.99984 31.6667 9.99984Z" fill="white"/>
           </svg>
           <span class="align-middle">7-11 賣貨便</span>
-        </a>
+        </a> -->
       </div>
 
       <img src="{{ url_for('static', path='assets/intro-m-footer.png') }}" alt="Mobile Intro Footer" class="w-full  ">
@@ -56,12 +56,12 @@
                 </svg>
                 <span class="align-middle">全家好賣+</span>
               </a>
-              <a href="https://myship.7-11.com.tw/general/detail/GM2507101245127" class="bg-[#16A34A] text-white px-8 py-4 rounded-full text-xl font-bold hover:bg-[#22c55e] shadow-lg transition duration-300 transform hover:scale-105" target="_blank">
+              <!-- <a href="https://myship.7-11.com.tw/general/detail/GM2507101245127" class="bg-[#16A34A] text-white px-8 py-4 rounded-full text-xl font-bold hover:bg-[#22c55e] shadow-lg transition duration-300 transform hover:scale-105" target="_blank">
                 <svg xmlns="http://www.w3.org/2000/svg" class="inline align-middle w-6 h-6" viewBox="0 0 40 40" fill="none">
                   <path d="M20 21.6665C17.7899 21.6665 15.6702 20.7885 14.1074 19.2257C12.5446 17.6629 11.6667 15.5433 11.6667 13.3332H15C15 14.6593 15.5268 15.931 16.4645 16.8687C17.4021 17.8064 18.6739 18.3332 20 18.3332C21.3261 18.3332 22.5979 17.8064 23.5355 16.8687C24.4732 15.931 25 14.6593 25 13.3332H28.3333C28.3333 15.5433 27.4554 17.6629 25.8926 19.2257C24.3298 20.7885 22.2101 21.6665 20 21.6665ZM20 4.99984C21.3261 4.99984 22.5979 5.52662 23.5355 6.4643C24.4732 7.40199 25 8.67375 25 9.99984H15C15 8.67375 15.5268 7.40199 16.4645 6.4643C17.4021 5.52662 18.6739 4.99984 20 4.99984ZM31.6667 9.99984H28.3333C28.3333 8.90549 28.1178 7.82185 27.699 6.81081C27.2802 5.79976 26.6664 4.8811 25.8926 4.10728C25.1187 3.33346 24.2001 2.71963 23.189 2.30084C22.178 1.88205 21.0943 1.6665 20 1.6665C17.7899 1.6665 15.6702 2.54448 14.1074 4.10728C12.5446 5.67008 11.6667 7.7897 11.6667 9.99984H8.33333C6.48333 9.99984 5 11.4832 5 13.3332V33.3332C5 34.2172 5.35119 35.0651 5.97631 35.6902C6.60143 36.3153 7.44928 36.6665 8.33333 36.6665H31.6667C32.5507 36.6665 33.3986 36.3153 34.0237 35.6902C34.6488 35.0651 35 34.2172 35 33.3332V13.3332C35 12.4491 34.6488 11.6013 34.0237 10.9761C33.3986 10.351 32.5507 9.99984 31.6667 9.99984Z" fill="white"/>
                 </svg>
                 <span class="align-middle">7-11 賣貨便</span>
-              </a>
+              </a> -->
             </div>
       </div>
 
