--- a/app/templates/pages/shipping.html
+++ b/app/templates/pages/shipping.html
@@ -47,7 +47,7 @@
                         <ul class="text-sm text-gray-600 space-y-1">
                             <li>• 配送時間：2-4 個工作天</li>
                             <li>• 取貨期限：到店後 7 天內</li>
-                            <li>• 支援店家：7-11、全家、萊爾富</li>
+                            <li>• 支援店家：全家、萊爾富</li>
                         </ul>
                     </div>
                 </div>
